<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginTop="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textAppearance="@android:style/TextAppearance.Material.Caption" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:drawablePadding="@dimen/margin_medium"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            tools:drawableStart="@mipmap/logo_avatar"
            tools:text="Taro" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:gravity="center_vertical"
        android:text="@string/body"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_padding"
        android:layout_marginEnd="@dimen/dialog_padding"
        android:gravity="top"
        android:hint="@string/hint_body"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        tools:text="Hello, world!" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dialog_button_padding"
        android:layout_marginBottom="@dimen/dialog_button_padding"
        android:text="@string/send" />

</LinearLayout>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".directshare.SendMessageActivity">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->