<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieFragment">

        <ImageView
            android:id="@+id/imageView_hero"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description_hero_image"
            android:fitsSystemWindows="false"
            android:scaleType="centerCrop"
            android:src="@drawable/header"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_poster"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:contentDescription="@string/content_description_poster"
            android:src="@drawable/poster"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_hero"
            app:layout_constraintDimensionRatio="w,400:576"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/imageView_hero"
            app:layout_constraintVertical_bias="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.041666668" />

        <TextView
            android:id="@+id/textView_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/template_movie_title"
            android:text="@string/template_movie_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@+id/imageView_hero" />

        <TextView
            android:id="@+id/textView_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/template_movie_details"
            android:text="@string/template_movie_details"
            app:layout_constraintStart_toEndOf="@+id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView_movie_title" />

        <Button
            android:id="@+id/button_rent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/rent"
            app:layout_constraintEnd_toStartOf="@+id/button_buy"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_poster" />

        <Button
            android:id="@+id/button_buy"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/buy"
            app:layout_constraintStart_toEndOf="@+id/button_rent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_poster" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="textView_movie_detail"
            tools:layout_editor_absoluteY="265dp" />

        <ImageButton
            android:id="@+id/button_add_to_playlist"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:contentDescription="@string/content_description_add_playlist"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_hero"
            app:srcCompat="@drawable/ic_bookmark" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_divider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom_action_buttons"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="button_buy,button_rent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.dumb_charades.RatingView
            android:id="@+id/fab_type_movie"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/fab_type"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons"
            app:rating="4.5"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_type"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/fab_rotten_tomato"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_type_movie"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons"
            app:srcCompat="@drawable/ic_family" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_rotten_tomato"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#FFF9C4"
            app:layout_constraintEnd_toStartOf="@+id/fab_similar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_type"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons"
            app:srcCompat="@drawable/tomato" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_similar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fab_rotten_tomato"
            app:layout_constraintTop_toTopOf="@+id/barrier_bottom_action_buttons"
            app:srcCompat="@drawable/ic_similar" />

        <TextView
            android:id="@+id/textview_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/template_number_ratings"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="@+id/fab_type_movie"
            app:layout_constraintStart_toStartOf="@+id/fab_type_movie"
            app:layout_constraintTop_toBottomOf="@+id/fab_type_movie" />

        <TextView
            android:id="@+id/textView_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/template_movie_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="@+id/fab_type"
            app:layout_constraintStart_toStartOf="@+id/fab_type"
            app:layout_constraintTop_toBottomOf="@+id/fab_type" />

        <TextView
            android:id="@+id/textView_tomato_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/template_rotten_tomato_rating"
            app:layout_constraintEnd_toEndOf="@+id/fab_rotten_tomato"
            app:layout_constraintStart_toStartOf="@+id/fab_rotten_tomato"
            app:layout_constraintTop_toBottomOf="@+id/fab_rotten_tomato" />

        <TextView
            android:id="@+id/textView_similarheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/template_similar"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="@+id/fab_similar"
            app:layout_constraintStart_toStartOf="@+id/fab_similar"
            app:layout_constraintTop_toBottomOf="@+id/fab_similar" />

        <View
            android:id="@+id/view_divider_below"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_divider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/textView_genre" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/template_movie_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/textView_genre" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>